# DownPour

./: .clang-format  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CODING_STANDARDS.md  HOW_TO_EDIT.md  IMPLEMENTATION_STATUS.md  MATH.md  MERGE_ANALYSIS.md  Makefile  README.md  SQUASHING_INSTRUCTIONS.md  format.sh  main.cpp  run.sh  run_clean.sh  run_with_log.sh  test_cuda.cu
.github/workflows/: cuda-test.yml
assets/models/: license.txt  scene.gltf
assets/models/bmw/: bmw.glb.json  bmw.glb.json.example  bmw.gltf  bmw.gltf.json
assets/models/road/: road.gltf
assets/textures/asphalt/: asphalt_01_rough_2k.exr
docs/: COMMIT_SQUASHING_GUIDE.md  MATERIAL_MIGRATION.md  VULKAN_DISPATCH_USAGE.md  WORKFLOW_GUIDE.md
scripts/: build_and_run.sh  format.sh  main.py  run.sh  run_clean.sh  run_with_log.sh  squash_commits.sh
shaders/: basic.vert  basic.vert.spv  car.frag  car.frag.spv  car.vert  car.vert.spv  debug.vert  debug.vert.spv  rain_particles.frag  rain_particles.vert  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  windshield_rain.frag  world.frag  world.frag.spv  world.vert  world.vert.spv
src/: DownPour.cpp  DownPour.h
src/core/: PipelineFactory.cpp  PipelineFactory.h  ResourceManager.cpp  ResourceManager.h  SwapChainManager.cpp  SwapChainManager.h  Types.h  VulkanContext.cpp  VulkanContext.h
src/logger/: Logger.cpp  Logger.h
src/renderer/: Camera.cpp  Camera.h  DescriptorAllocator.cpp  FrameResources.cpp  GLTFLoader.cpp  GLTFLoader.h  Material.cpp  Material.h  MaterialManager.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelAdapter.cpp  ModelAdapter.h  ModelGeometry.cpp  ModelGeometry.h  PipelineBuilder.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Shader.cpp  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
src/scene/: CameraEntity.cpp  CameraEntity.h  CarEntity.cpp  CarEntity.h  Entity.cpp  Entity.h  RoadEntity.h  Scene.cpp  Scene.h  SceneBuilder.cpp  SceneBuilder.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
src/simulation/: WeatherSystem.cpp  WeatherSystem.h  WindshieldSurface.cpp  WindshieldSurface.h
src/tools/: .gitignore  README.md  TOOLS_INDEX.md  bmw_analysis.json  inspect_car.py  main.py  material_data.json  material_detector.py  pyproject.toml
src/tools/GLTFTools/: .gitignore  README.md  pyproject.toml
src/tools/GLTFTools/python/: __init__.py  converter.py
src/tools/SceneEditor/: Cargo.toml  Makefile  README.md
src/tools/SceneEditor/src/: main.rs  renderer.rs  scene_data.rs  shader.wgsl  ui.rs
src/tools/SystemMonitor/: Makefile  README.md  macos_metrics.m  main.c  monitor  monitor.c  monitor.h  vulkan_detector.c  vulkan_detector.h
src/tools/material_data/: bmw.json  road.json
src/tools/tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vulkan/: VulkanDispatch.h  VulkanTypes.h
tools/: skybox_colors.py
tools/archive/: calculate_cockpit.py  visualize_model.py
