[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygltflib>=1.16.5",
    "trimesh>=4.5.3",
    "pillow>=11.0.0",
    "pyglet<2",
    "scipy>=1.17.0",
    "networkx>=3.6.1",
    "pyrender>=0.1.45",
]

[tool.setuptools]
py-modules = ["main", "material_detector"]
