[package]
name = "scene_editor"
version = "0.1.0"
edition = "2021"
authors = ["DownPour Team"]
description = "Interactive scene editor for DownPour driving simulator"

[[bin]]
name = "scene_editor"
path = "src/main.rs"

[dependencies]
eframe = "0.30"
egui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.29"

[profile.release]
opt-level = 3
lto = true
