[package]
name = "scene_editor"
version = "0.1.0"
edition = "2021"
authors = ["DownPour Team"]
description = "Interactive scene editor for DownPour driving simulator"

[[bin]]
name = "scene_editor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.30", features = ["wgpu"] }
egui = "0.30"
egui-wgpu = "0.30"
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
gltf = { version = "1.4", features = ["utils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.29"
rfd = "0.15"
image = "0.25"
pollster = "0.3"

[profile.release]
opt-level = 3
lto = true
